--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 backend/Masinsa/target/classes/META-INF/maven/com.masinsa/masinsa_project/pom.properties
 
 /.metadata/
+backend/Masinsa/target/classes/META-INF/maven/com.masinsa/masinsa_project/pom.properties
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QAnalysisInfo.java
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QDashBoard.java
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QImage.java
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QMask.java
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QMember.java
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QReview.java
+backend/Masinsa/target/generated-sources/com/spring/masinsa/entity/QWishList.java
