--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,7 @@ name: Build and Deploy to Google Compute Engine
 
 on:
   push:
-    branches:
-      - backend
+    branches: ["backend"]
 
 env:
   PROJECT_ID: $
@@ -32,6 +31,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name : Set up JDK 1.8
+        uses : actions/setup-java@v1
+        with :
+          java-version: 1.8
 
       # Setup gcloud CLI
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
