--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ name: Build and Deploy to Google Compute Engine
 on:
   push:
     branches: ["backend"]
+  pull_request:
+    branches: [ "master" ]
 
 env:
   PROJECT_ID: $
