--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ on:
   push:
     branches: ["backend"]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "backend" ]
 
 env:
   PROJECT_ID: $
