--- a/mask-front/package.json
+++ b/mask-front/package.json
@@ -13,12 +13,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "chart.js": "^4.1.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
